added tagging functionality to admin panel

--- a/config/locales/tags.en.yml
+++ b/config/locales/tags.en.yml
@@ -1,5 +1,11 @@
 en:
   tags:
+    types:
+      - case study
+      - interview
+      - discussion
+      - research
+      - updates
     top_causes:
       - prioritisation research
       - promoting effective altruism
