finalized tags in editing view

--- a/config/locales/tags.en.yml
+++ b/config/locales/tags.en.yml
@@ -5,12 +5,18 @@ en:
       - interview
       - discussion
       - research
-      - updates
+      - update
     top_causes:
       - prioritisation research
       - promoting effective altruism
       - catastrophic risks
       - global health
+      - immigration reform
+      - improving decision making
+      - factory farming
+      - biomedical research
+      - geoengineering
+      - open science
     top_careers:
       - finance
       - consulting
@@ -44,4 +50,10 @@ en:
     topics:
       - earning to give
       - career capital
+      - decision tools
+      - job satisfaction
+      - unconventional advice
+      - frameworks
+      - rules of thumb
+      - philosophy
     
